# adios4dolfinx

./: .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  _config.yml  _toc.yml  index.md  pyproject.toml
.github/workflows/: build_docker_image.yml  build_docs.yml  build_joss_paper.yml  check_formatting.yml  create_legacy_checkpoint.yml  create_legacy_data.yml  deploy_pages.yml  pypi.yml  test_package.yml  test_package_openmpi.yml  test_redhat.yml
docker/: Dockerfile
docs/: adding_backend.md  adios2.rst  api.rst  backend.rst  debugging.md  h5py.rst  ipyparallel_intro.py  meshtags.py  migration_guide.md  original_checkpoint.py  partitioned_mesh.py  snapshot_checkpoint.py  time_dependent_mesh.py  writing_functions_checkpoint.py  writing_mesh_checkpoint.py
joss-paper/: README.md  joss-checklist.md  paper.bib  paper.md
src/adios4dolfinx/: __init__.py  adios2_helpers.py  checkpointing.py  comm_helpers.py  legacy_readers.py  original_checkpoint.py  readers.py  snapshot.py  structures.py  utils.py  writers.py
src/adios4dolfinx/backends/: __init__.py
src/adios4dolfinx/backends/adios2/: __init__.py  backend.py
src/adios4dolfinx/backends/h5py/: __init__.py  backend.py
src/adios4dolfinx/backends/pyvista/: backend.py
src/adios4dolfinx/backends/vtkhdf/: backend.py
src/adios4dolfinx/backends/xdmf/: backend.py
tests/: conftest.py  create_legacy_checkpoint.py  create_legacy_data.py  debug.py  mwe_distribute.py  test_attributes.py  test_checkpointing.py  test_checkpointing_vector.py  test_conversion.py  test_geometry_dofmap_reconstruction.py  test_legacy_readers.py  test_mesh_writer.py  test_meshtags.py  test_new.py  test_numpy_vectorization.py  test_original_checkpoint.py  test_permutations.py  test_pyvista.py  test_read_write_function.py  test_snapshot_checkpoint.py  test_submesh.py  test_submesh_wo_io.py  test_utils.py  test_version.py  test_vtkhdf.py  test_xdmf.py
